wip. made some refactoring. added tests for eventProcessor and LinearizationRevisionRepository. test for eventProcessor still fail, need to check what happens.