@@ -5,33 +5,23 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.mongodb.client.model.InsertOneModel;
 import edu.stanford.protege.webprotege.common.ProjectId;
 import edu.stanford.protege.webprotege.initialrevisionhistoryservice.events.*;
-import edu.stanford.protege.webprotege.initialrevisionhistoryservice.model.EntityLinearizationHistory;
-import edu.stanford.protege.webprotege.initialrevisionhistoryservice.model.HistoryId;
-import edu.stanford.protege.webprotege.initialrevisionhistoryservice.model.LinearizationRevision;
-import edu.stanford.protege.webprotege.initialrevisionhistoryservice.model.WhoficEntityLinearizationSpecification;
+import edu.stanford.protege.webprotege.initialrevisionhistoryservice.model.*;
 import org.bson.Document;
 import org.jetbrains.annotations.NotNull;
-import org.springframework.data.mongodb.core.MongoTemplate;
 import org.springframework.stereotype.Service;
 
 import java.util.*;
 import java.util.stream.Collectors;
 
-import static edu.stanford.protege.webprotege.initialrevisionhistoryservice.model.EntityLinearizationHistory.*;
-import static org.springframework.data.mongodb.core.query.Criteria.where;
-import static org.springframework.data.mongodb.core.query.Query.query;
-
 @Service
 public class LinearizationRevisionService {
 
-    public final static String REVISION_HISTORY_COLLECTION = "EntityLinearizationHistories";
-
-    private final MongoTemplate mongoTemplate;
+    private final LinearizationRevisionRepository linearizationRevisionRepo;
 
     private final ObjectMapper objectMapper;
 
-    public LinearizationRevisionService(MongoTemplate mongoTemplate, ObjectMapper objectMapper) {
-        this.mongoTemplate = mongoTemplate;
+    public LinearizationRevisionService(LinearizationRevisionRepository linearizationRevisionRepo, ObjectMapper objectMapper) {
+        this.linearizationRevisionRepo = linearizationRevisionRepo;
         this.objectMapper = objectMapper;
     }
 
@@ -59,15 +49,10 @@ public class LinearizationRevisionService {
         return new EntityLinearizationHistory(linearizationSpecification.entityIRI(), projectId, new HashSet<>(List.of(linearizationRevision)));
     }
 
+    public EntityLinearizationHistory getExistingHistoryOrderedByRevision(String entityIri, ProjectId projectId) {
 
-    public EntityLinearizationHistory getExistingHistory(String entityIri, ProjectId projectId) {
-        var query = query(where(WHOFIC_ENTITY_IRI_KEY).is(entityIri).and(PROJECT_ID).is(projectId).in(REVISION_HISTORY_COLLECTION));
-        EntityLinearizationHistory history = mongoTemplate.findOne(query, EntityLinearizationHistory.class);
+        EntityLinearizationHistory history = linearizationRevisionRepo.getExistingHistory(entityIri, projectId);
 
-        /*
-        ToDo:
-            make test for this
-         */
         if (history != null) {
             // Sort the linearizationRevisions by timestamp
             Set<LinearizationRevision> sortedRevisions = history.getLinearizationRevisions()
@@ -82,9 +67,6 @@ public class LinearizationRevisionService {
         return null;
     }
 
-    public void saveLinearizationHistory(EntityLinearizationHistory entityLinearizationHistory) {
-        mongoTemplate.save(entityLinearizationHistory, REVISION_HISTORY_COLLECTION);
-    }
 
     private Set<LinearizationEvent> mapLinearizationResidualsEvents(WhoficEntityLinearizationSpecification linearizationSpecification) {
         Set<LinearizationEvent> residuals = new HashSet<>();
@@ -126,13 +108,10 @@ public class LinearizationRevisionService {
                 }).collect(Collectors.toSet());
     }
 
-    public void saveAll(Set<EntityLinearizationHistory> historiesToBeSaved) {
-        var collection = mongoTemplate.getCollection(REVISION_HISTORY_COLLECTION);
-        /* THIS WORKS IF THE RECEIVED HISTORIES ARE UNIQUE */
+    public void saveEntityLinearizationHistory(Set<EntityLinearizationHistory> historiesToBeSaved) {
         var documents = historiesToBeSaved.stream()
                 .map(history -> new InsertOneModel<>(objectMapper.convertValue(history, Document.class)))
-                .collect(Collectors.toList());
-
-        collection.bulkWrite(documents);
+                .toList();
+        linearizationRevisionRepo.bulkWriteDocuments(documents);
     }
 }
